--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -44,9 +44,10 @@
               <h3 class="panel-title">站点内容统计：</h3>
             </div>
             <ul class="list-group">
-              <li class="list-group-item"><strong>10</strong>篇文章（<strong>2</strong>篇草稿）</li>
-              <li class="list-group-item"><strong>6</strong>个分类</li>
-              <li class="list-group-item"><strong>5</strong>条评论（<strong>1</strong>条待审核）</li>
+              <li class="list-group-item" id="post"></li>
+              <li class="list-group-item" id="classCount"></li>
+
+              <li class="list-group-item" id="commentCount"></li>
             </ul>
           </div>
         </div>
@@ -95,28 +96,11 @@
 
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+  <script src="../assets/js/index.js"></script>
   <script>
     NProgress.done()
   </script>
-  <script>
-    $("#logout").on('click', function () {
-      //做一个确认,如果是true的话就让他转跳到登录页面
-      var isConfirm = confirm('确认要退出登录吗?')
-      if (isConfirm) {
-        $.ajax({
-          type: 'post',
-          url: '/logout',
-          success: function (data) {
-            location.href = '/admin/login.html'
-
-          },
-          error: function () {
-            alert('退出失败')
-          }
-        })
-      }
-    })
-  </script>
+ 
 </body>
 
 </html>
